k8s-manifest.yml
apiVersion: v1
kind: Namespace
metadata:
  name: dnv
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dnv
  name: dnv-web
  labels:
    app: dnv-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dnv-web
  template:
    metadata:
      labels:
        app: dnv-web
    spec:
      containers:
        - name: app
          image: ghcr.io/callumthomson/dear-next-visitor:${IMAGE_TAG}
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  namespace: dnv
  name: dnv-web
spec:
  selector:
    app: dnv-web
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  namespace: dnv
  name: dnv
spec:
  parentRefs:
    - name: mygateway
      namespace: nginx-gateway
  hostnames:
    - www.dearnextvisitor.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: dnv-web
          port: 3000
